2.1.3 (2016051907)
Bug: Fixed issue with course logs not being backup/restore.

2.1.2 (2016051906)
Bug: Fixed version format for recording list so it works for formats used in non western countries.
Bug: Fixed issue with user limit not being correctly enforced when default limit was updated and edition was not allowed. (This bug only affected sites making use of the user limit feature)
Bug: Fixed issue in "wait for moderator" feature. The only way to enable the join session was to refresh the page manually.

2.1.1 (2016051905)
Bug: Fixed issue with database upgrade when updating from versions older than 2.1.x. (This bug only affected users upgrading directly from 1.x to 2.1.0).

2.1.0 (2016051904)
Tag: Bumped version and release tags and updated maturity to stable

2.1.0-rc2 (2016051903)
Bug: Fixed missing variable triggering warning message showing up on in development mode
Bug: Fixed bug in format of imported recordings on YUI table
Bug: Fixed a bug in import recording. Recordings from deleted activities were not considered.

2.1.0-rc1 (2016051902)
Tag: Bumped release tag and updated maturity

2.1.0-b3 (2016051902)
Bug: Considers all the imported recordings corresponding to a course.
Bug: Duration was not shown properly in recordings
Bug: All events are localized
Bug: recordings not showing up after restore
Bug: backup/restore were not working on logs
Bug: Added missing event

2.1.0-b2 (2016051901)
Fixed bug: Fix for action management not working in recordings.

2.1.0-b1 (2016051900)
Enhancement: Links to recordings can now be imported into a room/activity from a different course room/activity.
Bug: Fixed backups. The logs, a secondary table dependent of mdl_bigbluebuttonbn used for tracking meeting creation is now included as part of the backup.
Bug: Fixed issue with database prefix.

2.0.4 (2015080611)
Bug: Fixed a bug introduced in the previous revision that was making pre-uploaded presentations to be ignored when a new activity was created.