@@ -297,21 +297,13 @@ $string['event_activity_modified'] = 'BigBlueButtonBN activity modified';
 $string['event_activity_viewed'] = 'BigBlueButtonBN activity viewed';
 $string['event_activity_viewed_all'] = 'BigBlueButtonBN activity management viewed';
 $string['event_meeting_created'] = 'BigBlueButtonBN meeting created';
-$string['event_meeting_created_description'] = 'The user with id \'{$a->userid}\' created a bigbluebutton meeting for the bigbluebuttonbn activity with id \'{$a->bigbluebuttonbnid}\' for the course id {$a->courseid}.';
 $string['event_meeting_ended'] = 'BigBlueButtonBN meeting forcibly ended';
-$string['event_meeting_ended_description'] = 'A bigbluebutton meeting for the bigbluebuttonbn activity with id \'{$a->bigbluebuttonbnid}\' for the course id \'{$a->courseid}\' has been forcibly ended by the user with id \'{$a->userid}\'.';
 $string['event_meeting_joined'] = 'BigBlueButtonBN meeting joined';
-$string['event_meeting_joined_description'] = 'The user with id \'{$a->userid}\' has joined a bigbluebutton meeting for the bigbluebuttonbn activity with id \'{$a->bigbluebuttonbnid}\' for the course id \'{$a->courseid}\'.';
 $string['event_meeting_left'] = 'BigBlueButtonBN meeting left';
-$string['event_meeting_left_description'] = 'The user with id \'{$a->userid}\' has left a bigbluebutton meeting for the bigbluebuttonbn activity with id \'{$a->bigbluebuttonbnid}\' for the course id \'$this->courseid\'.';
 $string['event_recording_deleted'] = 'Recording deleted';
-$string['event_recording_deleted_description'] = 'The user with id \'{$a->userid}\' has deleted a recording with id \'{$a->recordingid}\' from the course id \'{$a->courseid}\'.';
 $string['event_recording_imported'] = 'Recording imported';
-$string['event_recording_imported_description'] = 'The user with id \'{$a->userid}\' has imported a recording with id \'{$a->recordingid}\' into the course id \'{$a->courseid}\'.';
 $string['event_recording_published'] = 'Recording published';
-$string['event_recording_published_description'] = 'The user with id \'{$a->userid}\' has published a recording with id \'{$a->recordingid}\' in the course id \'{$a->courseid\'}.';
 $string['event_recording_unpublished'] = 'Recording unpublished';
-$string['event_recording_unpublished_description'] = 'The user with id \'{$a->userid}\' has unpublished a recording with id \'{$a->recordingid}\' in the course id \'{$a->courseid\'}.';
 
 $string['predefined_profile_default'] = 'Default';
 $string['predefined_profile_classroom'] = 'Classroom';
